[FIX] PostRepDto 수정